change to java 17